ipc/ipdl/test/ipdl/ok/Pmaybe_OfActors.ipdl
include protocol Pmaybe_OfActorsSub;

protocol Pmaybe_OfActors {
    manages Pmaybe_OfActorsSub;

child:
    async Msg(Pmaybe_OfActorsSub? p);

    async Pmaybe_OfActorsSub();
};
