ipc/ipdl/test/ipdl/error/trans_WrongDirection.ipdl
protocol trans_WrongDirection {

child:
    Msg();
    delete();

state S1:
    recv Msg goto S1;

start state _:
    send delete();
};
